smten/share/lib/Smten/Tests/ShouldFail/BadType2.smtn

module Smten.Tests.ShouldFail.BadType2 where

import Prelude

foo :: Bool
foo = not (18 :: Integer)

